css/styles.scss
---
---

@import "bootstrap";

html {
  position: relative;
  min-height: 100%;
}

body {
  margin-bottom: 6.75em;
}

.navbar-simple {
  text-transform: uppercase;

  .navbar-brand {
    margin-top: 0.25em;
    color: black;
    font-size: 3em;
    text-transform: none;
    font-family: Tangerine;
    color: #e0a240;

    @media(max-width: $screen-xs-max) {
      font-size: 2.5em;
    }
  }

  .fa-bars {
    font-size: 2em;
    padding-left: 0.5em;
    padding-right: 0.5m;
  }

  .navbar-nav {
    margin-top: 1em;

    a {
      background: transparent; 
      color: black;
    }
    a:hover {
      background: transparent; 
      color: #e0a240;
    }
  }
}

#main {
  padding-bottom: 2em;
}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 6.75em;
  background-color: #f5f5f5;

  .container {
    margin-top: 1em;
  }

  .social {
    text-align: center;
  }

  #follow-me {
    ul {
      list-style: none;

      li {
        display: inline;
        font-size: 1.5em;
      }

      a {
        cursor: pointer;
        padding-right: 1em;
      }
    }
  }
}

.photo-gallery {
  .row {
    @media (max-width: $screen-xs-max) {
      text-align: center;
    }
    
    .photo {
      margin-bottom: 1em;
      @media (max-width: $screen-xs-max) {
        display:inline-block;
        float:none;
        text-align:left;
        margin-right:-4px;
      }
    }
  }
}

#profile {
  margin-bottom: 1em;
}

#contact {
  margin-top: 2em;
}

#thank-you {
  padding: 1em;
}

.photo-cover {
  background-image: url(../images/web/IMG_7864.jpg);
  //background-image: url(../images/web/COVER_OPTION2.jpg);
  background-position: center center !important;
  background-size: cover;
  
  min-height: 800px;
  display: block;
  width: 100%;

  @media(max-width: $screen-xs-max) {
    height: 30vh;
    min-height: 300px;
  }
}

#photo-cover-quote {
  font-family: Tangerine;
  color: #e0a240;
  font-size: 2em;
}

